--- a/layouts/main.html
+++ b/layouts/main.html
@@ -28,14 +28,18 @@
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
 
 
+  <!-- CSS: blueprint framework -->
+  <link href="/css/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
+  <link href="/css/print.css" media="print" rel="stylesheet" type="text/css" />
+  <!--[if lt IE 8]>
+    <link href="/css/ie.css" media="screen, projection" rel="stylesheet" type="text/css" />
+  <![endif]-->
+
   <!-- CSS: implied media="all" -->
-  <link rel="stylesheet" href="/css/less.css"/>
+  <!-- Google Fonts -->
   <link href='http://fonts.googleapis.com/css?family=Expletus+Sans:bold' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Kreon:regular,bold' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="/css/main.css">
-
-  <!-- Uncomment if you are specifically targeting less enabled mobile browsers
-  <link rel="stylesheet" media="handheld" href="css/handheld.css?v=2">  -->
 
   <!-- All JavaScript at the bottom, except for Modernizr which enables HTML5 elements & feature detects -->
   <script src="/js/libs/modernizr-1.7.min.js"></script>
@@ -44,77 +48,59 @@
 
 </head>
 
-<body lang="<%= language %>">
-  <header>
-    <div id="choixrss"><%= choixrss %></div>
-    <div id="choixlang"><%= choixlang %></div>
-    <nav id="mainnav">
-        <ul>
-            <%= generateMenu %>
-        </ul>
-    </nav>
-  </header>
-  <div id="metacontainer">
-    <div id="container">
-
+<body lang="<%= language %>" class="bp">
+  <div id="container">
+    <header>
+      <hgroup>
+        <%= page_title %>
+      </hgroup>
+      <div id="choixlang"><%= choixlang %></div>
+      <div id="choixrss"><%= choixrss %></div>
+      <nav id="mainnav">
+          <ul>
+              <%= generateMenu %>
+          </ul>
+      </nav>
+    </header>
       <div id="main" role="main">
-        <hgroup>
-          <h1><%= @item[:content_for_title].nil? ? @item[:title] : @item[:content_for_title] %></h1>
-          <% unless @item[:subtitle].nil? and @item[:content_for_subtitle].nil? %> 
-          <h2>
-          <%= @item[:content_for_subtitle].nil? ? @item[:subtitle] : @item[:content_for_subtitle] %>
-          </h2>
-          <% end %>
-        </hgroup>
-        
         <article>
             <div class="content">
                 <%= yield %>
             </div>
             <footer>
                 <ul class="article_metadata">
-                    <li><%=tradOf(:last_modified)%>: <time> <%= gitmtime.strftime(@config[:dateFormat][language.intern]) %></time></li>
-                    <li><%=tradOf(:copyright) %></li>
+                    <li><%= last_modified_tag %></li>
+                    <li><%= tradOf(:copyright) %></li>
                 </ul>
             </footer>
         </article>
-
       </div>
-    </div> <!--! end of #container -->
-  </div> <!--! end of #metacontainer -->
-  <footer>
-    <div id="webpageinfo">
-        <%=tradOf(:copyright) %>
-        <div>
-            <%= tradOf(:entirely_done_with) %>
-            <a href="http://www.vim.org">Vim</a>
-            <%= tradOf(:and) %> 
-            <a href="http://nanoc.stoneship.org">nanoc</a>
-        </div>
-    </div>
-  </footer>
-
-
+    <footer>
+      <div id="webpageinfo">
+          <%=tradOf(:copyright) %>
+          <div>
+              <%= tradOf(:entirely_done_with) %>
+              <a href="http://www.vim.org">Vim</a>
+              <%= tradOf(:and) %> 
+              <a href="http://nanoc.stoneship.org">nanoc</a>
+              <!-- TODO: add compass, blueprint -->
+          </div>
+      </div>
+    </footer>
+  </div> <!--! end of #container -->
   <!-- JavaScript at the bottom for fast page loading -->
-
   <!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if necessary -->
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.js"></script>
   <script>window.jQuery || document.write("<script src='/js/libs/jquery-1.5.1.min.js'>\x3C/script>")</script>
-
-
   <!-- scripts concatenated and minified via ant build script-->
   <script src="/js/plugins.js"></script>
   <script src="/js/script.js"></script>
   <%= @item[:content_for_js] %>
   <!-- end scripts-->
-
-
   <!--[if lt IE 7 ]>
     <script src="/js/libs/dd_belatedpng.js"></script>
     <script>DD_belatedPNG.fix("img, .png_bg"); // Fix any <img> or .png_bg bg-images. Also, please read goo.gl/mZiyb </script>
   <![endif]-->
-
-
   <!-- mathiasbynens.be/notes/async-analytics-snippet Change UA-XXXXX-X to be your site's ID -->
   <script>
     var _gaq=[["_setAccount","UA-10612400-2"],["_trackPageview"]];
@@ -122,7 +108,6 @@
     g.src=("https:"==location.protocol?"//ssl":"//www")+".google-analytics.com/ga.js";
     s.parentNode.insertBefore(g,s)}(document,"script"));
   </script>
-
   <%= user_voice %>
 </body>
 </html>
