--- a/site/css/main.css
+++ b/site/css/main.css
@@ -1,297 +1,37 @@
-/* line 65, ../src/main.scss */
+/* line 10, ../src/main.sass */
 * {
   -moz-transition-property: all;
   -webkit-transition-property: all;
   -o-transition-property: all;
   transition-property: all;
-  -moz-transition-duration: 0.5s;
-  -webkit-transition-duration: 0.5s;
-  -o-transition-duration: 0.5s;
-  transition-duration: 0.5s;
+  -moz-transition-duration: 0.2s;
+  -webkit-transition-duration: 0.2s;
+  -o-transition-duration: 0.2s;
+  transition-duration: 0.2s;
 }
 
-/* line 70, ../src/main.scss */
-body {
-  background: #dddde0;
-  font-family: Georgia, 'Kreon', serif;
-  font-size: 1.2em;
+/* line 21, ../src/main.sass */
+#container {
+  width: 950px;
+  margin: 0 auto;
 }
 
-/* line 76, ../src/main.scss */
+/* line 26, ../src/main.sass */
 a {
-  color: #7689a6;
-  border: none;
   text-decoration: none;
 }
 
-/* line 81, ../src/main.scss */
-a:hover {
-  color: #cc6d00;
-}
-
-/* line 85, ../src/main.scss */
-img {
-  max-width: 100%;
-}
-
-/* line 88, ../src/main.scss */
-article img {
-  background-color: rgba(0, 0, 0, 0.02);
-  -moz-box-shadow: white 0 0 3px, rgba(0, 0, 0, 0.2) 0 0 3px inset;
-  -webkit-box-shadow: white 0 0 3px, rgba(0, 0, 0, 0.2) 0 0 3px inset;
-  -o-box-shadow: white 0 0 3px, rgba(0, 0, 0, 0.2) 0 0 3px inset;
-  box-shadow: white 0 0 3px, rgba(0, 0, 0, 0.2) 0 0 3px inset;
-  -moz-border-radius: 5px;
-  -webkit-border-radius: 5px;
-  -o-border-radius: 5px;
-  -ms-border-radius: 5px;
-  -khtml-border-radius: 5px;
-  border-radius: 5px;
-  padding: 15px;
-  width: 344px;
-  margin-right: 24px;
-  margin: 24px;
-}
-/* line 40, ../src/main.scss */
-article img > * {
-  padding: 20px;
-}
-/* line 43, ../src/main.scss */
-article img:hover {
-  background-color: rgba(0, 0, 0, 0.05);
-}
-/* line 94, ../src/main.scss */
-article img.left {
-  margin: 0 24px 24px 0;
-}
-/* line 97, ../src/main.scss */
-article img.right {
-  margin: 0 0 24px 24px;
-}
-
-/* line 102, ../src/main.scss */
-.corps {
-  margin: 48px 0;
-  line-height: 32px;
-}
-
-/* line 107, ../src/main.scss */
-#metacontainer {
-  border-bottom: 1px solid #888;
-}
-
-/* line 110, ../src/main.scss */
-body > header {
-  margin: 0;
-  color: #CCC;
-  background-color: #2c5490;
-  line-height: 50px;
-  font-weight: bold;
-  -moz-box-shadow: 0px 0px 5px #333333;
-  -webkit-box-shadow: 0px 0px 5px #333333;
-  -o-box-shadow: 0px 0px 5px #333333;
-  box-shadow: 0px 0px 5px #333333;
-}
-
-/* line 118, ../src/main.scss */
-body > footer {
-  border-top: solid 1px rgba(0, 0, 0, 0.1);
-  border-bottom: solid 1px rgba(0, 0, 0, 0.1);
-  padding: 80px;
-  margin: 0;
-  bottom: 0;
-  background-color: #bcd0ee;
-  font-size: .9em;
-  text-shadow: 1px 1px white;
-  -moz-box-shadow: rgba(0, 0, 0, 0.2) 0 0 7px inset;
-  -webkit-box-shadow: rgba(0, 0, 0, 0.2) 0 0 7px inset;
-  -o-box-shadow: rgba(0, 0, 0, 0.2) 0 0 7px inset;
-  box-shadow: rgba(0, 0, 0, 0.2) 0 0 7px inset;
-}
-/* line 128, ../src/main.scss */
-body > footer a {
-  color: #2c5490;
-}
-
-/* line 133, ../src/main.scss */
-article > footer {
-  margin: 48px 0;
-  width: 252px;
-  margin-right: 24px;
-  background-color: rgba(0, 0, 0, 0.02);
-  -moz-box-shadow: white 0 0 3px, rgba(0, 0, 0, 0.2) 0 0 3px inset;
-  -webkit-box-shadow: white 0 0 3px, rgba(0, 0, 0, 0.2) 0 0 3px inset;
-  -o-box-shadow: white 0 0 3px, rgba(0, 0, 0, 0.2) 0 0 3px inset;
-  box-shadow: white 0 0 3px, rgba(0, 0, 0, 0.2) 0 0 3px inset;
-  -moz-border-radius: 5px;
-  -webkit-border-radius: 5px;
-  -o-border-radius: 5px;
-  -ms-border-radius: 5px;
-  -khtml-border-radius: 5px;
-  border-radius: 5px;
-  font-size: .7em;
-}
-/* line 135, ../src/main.scss */
-article > footer ul {
-  list-style-type: none;
-}
-/* line 40, ../src/main.scss */
-article > footer > * {
-  padding: 20px;
-}
-/* line 43, ../src/main.scss */
-article > footer:hover {
-  background-color: rgba(0, 0, 0, 0.05);
-}
-/* line 141, ../src/main.scss */
-article > footer ul {
-  list-style-type: none;
-}
-
-/* line 148, ../src/main.scss */
-nav {
-  border-bottom: solid 1px rgba(0, 0, 0, 0.1);
-}
-/* line 151, ../src/main.scss */
-nav ul {
-  list-style-type: none;
-}
-/* line 153, ../src/main.scss */
-nav ul li {
-  display: inline-block;
-  height: 50px;
-  margin-right: 0;
-  width: 8em;
-  text-align: center;
-  border-left: solid 1px rgba(255, 255, 255, 0.1);
-  border-right: solid 1px rgba(0, 0, 0, 0.2);
-}
-/* line 161, ../src/main.scss */
-nav ul li * {
-  display: block;
-  margin-right: 0px;
-  margin-left: 0px;
-  padding: 0 10px;
-  height: 100%;
-  text-shadow: -1px -1px rgba(0, 0, 0, 0.2), 1px 1px rgba(0, 0, 0, 0.2);
-}
-/* line 169, ../src/main.scss */
-nav ul li span.active {
-  background-color: rgba(0, 0, 0, 0.1);
-}
-/* line 172, ../src/main.scss */
-nav ul li a {
-  color: rgba(255, 255, 255, 0.8);
-}
-/* line 174, ../src/main.scss */
-nav ul li a:hover {
-  color: rgba(255, 255, 255, 0.8);
-  background-color: rgba(255, 255, 255, 0.1);
-}
-
-/* line 183, ../src/main.scss */
-header #choixrss, header #choixlang {
-  display: block;
-  text-shadow: -1px -1px rgba(0, 0, 0, 0.2), 1px 1px rgba(0, 0, 0, 0.2);
-  float: right;
-  height: 50px;
-  text-align: center;
-  border-left: solid 1px rgba(255, 255, 255, 0.1);
-  border-right: solid 1px rgba(0, 0, 0, 0.2);
-}
-/* line 191, ../src/main.scss */
-header #choixrss a, header #choixlang a {
-  color: #bcd0ee;
-  display: block;
-  height: 100%;
+/* line 29, ../src/main.sass */
+h1 {
   text-align: center;
 }
-/* line 197, ../src/main.scss */
-header #choixrss a:hover, header #choixlang a:hover {
-  color: rgba(255, 255, 255, 0.8);
-  background-color: rgba(255, 255, 255, 0.1);
-}
 
-/* line 203, ../src/main.scss */
-nav ul li, #choixlang, #choixrss {
-  width: 160px;
-}
-/* line 204, ../src/main.scss */
-nav ul li a:hover, #choixlang a:hover, #choixrss a:hover {
-  -moz-box-shadow: #333377 0 0 8px inset;
-  -webkit-box-shadow: #333377 0 0 8px inset;
-  -o-box-shadow: #333377 0 0 8px inset;
-  box-shadow: #333377 0 0 8px inset;
-}
-
-/* line 210, ../src/main.scss */
-#main, #container {
-  margin: 0px auto;
-}
-
-/* line 214, ../src/main.scss */
-h1, h2, h3, h4, h5, h6 {
-  font-family: 'Expletus Sans',Futura,sans-serif;
-  text-shadow: 0px -1px 0px #223366, 0px 1px 0px white;
-  font-weight: bold;
-  color: #7689a6;
-  margin: 48px 0;
-  text-align: center;
-}
-/* line 223, ../src/main.scss */
-h1 a:hover, h2 a:hover, h3 a:hover, h4 a:hover, h5 a:hover, h6 a:hover {
-  text-shadow: 0px -1px 0px #883c00, 0px 1px 0px white;
-}
-
-/* line 229, ../src/main.scss */
-article article {
-  background-color: rgba(0, 0, 0, 0.02);
-  -moz-box-shadow: white 0 0 3px, rgba(0, 0, 0, 0.2) 0 0 3px inset;
-  -webkit-box-shadow: white 0 0 3px, rgba(0, 0, 0, 0.2) 0 0 3px inset;
-  -o-box-shadow: white 0 0 3px, rgba(0, 0, 0, 0.2) 0 0 3px inset;
-  box-shadow: white 0 0 3px, rgba(0, 0, 0, 0.2) 0 0 3px inset;
-  -moz-border-radius: 5px;
-  -webkit-border-radius: 5px;
-  -o-border-radius: 5px;
-  -ms-border-radius: 5px;
-  -khtml-border-radius: 5px;
-  border-radius: 5px;
-  margin: 24px 0;
-}
-/* line 40, ../src/main.scss */
-article article > * {
-  padding: 20px;
-}
-/* line 43, ../src/main.scss */
-article article:hover {
-  background-color: rgba(0, 0, 0, 0.05);
-}
-/* line 231, ../src/main.scss */
-article article .date {
-  float: right;
-  padding: 0;
-  margin: 20px;
-}
-/* line 233, ../src/main.scss */
-article article h1, article article h2, article article h3, article article h4, article article h5, article article h6 {
-  text-align: left;
-  font-size: 36px;
-  line-height: 30px;
-  margin: 0 0 16px;
-}
-
-/* line 241, ../src/main.scss */
-.intro {
-  margin-bottom: 24px;
-}
-
-/* line 245, ../src/main.scss */
-.sc {
-  font-variant: small-caps;
-}
-
-/* line 249, ../src/main.scss */
+/* line 39, ../src/main.sass */
 .block {
+  display: inline;
+  float: left;
+  margin-right: 10px;
+  width: 230px;
   background-color: rgba(0, 0, 0, 0.02);
   -moz-box-shadow: white 0 0 3px, rgba(0, 0, 0, 0.2) 0 0 3px inset;
   -webkit-box-shadow: white 0 0 3px, rgba(0, 0, 0, 0.2) 0 0 3px inset;
@@ -303,203 +43,97 @@ article article h1, article article h2, article article h3, article article h4, 
   -ms-border-radius: 5px;
   -khtml-border-radius: 5px;
   border-radius: 5px;
-  margin-bottom: 48px;
-  height: 144px;
-  cursor: pointer;
-  width: 252px;
-  margin-right: 24px;
-  float: left;
 }
-/* line 40, ../src/main.scss */
+/* line 147, ../../../../../../var/lib/gems/1.8/gems/compass-0.11.1/frameworks/blueprint/stylesheets/blueprint/_grid.scss */
+* html .block {
+  overflow-x: hidden;
+}
+/* line 36, ../src/main.sass */
 .block > * {
   padding: 20px;
 }
-/* line 43, ../src/main.scss */
+/* line 42, ../src/main.sass */
 .block:hover {
   background-color: rgba(0, 0, 0, 0.05);
 }
-/* line 253, ../src/main.scss */
-.block h3 {
-  text-size: .6em;
-  text-align: left;
-  margin: 0 0 12px;
-}
 
-/* line 262, ../src/main.scss */
-.right {
-  float: right;
-}
-
-/* line 265, ../src/main.scss */
-.left {
+/* line 45, ../src/main.sass */
+#choixlang {
+  display: inline;
   float: left;
+  margin-right: 10px;
+  width: 150px;
+}
+/* line 147, ../../../../../../var/lib/gems/1.8/gems/compass-0.11.1/frameworks/blueprint/stylesheets/blueprint/_grid.scss */
+* html #choixlang {
+  overflow-x: hidden;
 }
 
-/* line 268, ../src/main.scss */
+/* line 48, ../src/main.sass */
+#choixrss {
+  text-align: right;
+  display: inline;
+  float: left;
+  position: relative;
+  margin: 0 -640px 1.5em 640px;
+  display: inline;
+  float: left;
+  margin-right: 10px;
+  width: 150px;
+  margin-right: 0;
+}
+/* line 147, ../../../../../../var/lib/gems/1.8/gems/compass-0.11.1/frameworks/blueprint/stylesheets/blueprint/_grid.scss */
+* html #choixrss {
+  overflow-x: hidden;
+}
+
+/* line 55, ../src/main.sass */
+#mainnav ul {
+  padding-left: 0;
+  list-style-type: none;
+  display: inline;
+  float: left;
+  margin-right: 10px;
+  width: 950px;
+  margin-right: 0;
+  margin: 0 auto;
+}
+/* line 147, ../../../../../../var/lib/gems/1.8/gems/compass-0.11.1/frameworks/blueprint/stylesheets/blueprint/_grid.scss */
+* html #mainnav ul {
+  overflow-x: hidden;
+}
+/* line 61, ../src/main.sass */
+#mainnav ul li {
+  display: inline;
+  float: left;
+  margin-right: 10px;
+  width: 230px;
+}
+/* line 147, ../../../../../../var/lib/gems/1.8/gems/compass-0.11.1/frameworks/blueprint/stylesheets/blueprint/_grid.scss */
+* html #mainnav ul li {
+  overflow-x: hidden;
+}
+/* line 63, ../src/main.sass */
+#mainnav ul li * {
+  display: block;
+  text-align: center;
+  width: 100%;
+}
+
+/* line 67, ../src/main.sass */
+footer {
+  display: inline;
+  float: left;
+  margin-right: 10px;
+  width: 950px;
+  margin-right: 0;
+}
+/* line 147, ../../../../../../var/lib/gems/1.8/gems/compass-0.11.1/frameworks/blueprint/stylesheets/blueprint/_grid.scss */
+* html footer {
+  overflow-x: hidden;
+}
+
+/* line 71, ../src/main.sass */
 .flush {
   clear: both;
-}
-
-/* line 271, ../src/main.scss */
-.slideshow {
-  background: #88aadd;
-  color: #fafafa;
-  font-weight: bold;
-  text-shadow: 0 0 3px black;
-  -moz-border-radius: 5px;
-  -webkit-border-radius: 5px;
-  -o-border-radius: 5px;
-  -ms-border-radius: 5px;
-  -khtml-border-radius: 5px;
-  border-radius: 5px;
-  -moz-box-shadow: white 0 0 3px, rgba(0, 0, 0, 0.3) 0 0 5px inset;
-  -webkit-box-shadow: white 0 0 3px, rgba(0, 0, 0, 0.3) 0 0 5px inset;
-  -o-box-shadow: white 0 0 3px, rgba(0, 0, 0, 0.3) 0 0 5px inset;
-  box-shadow: white 0 0 3px, rgba(0, 0, 0, 0.3) 0 0 5px inset;
-  width: 804px;
-}
-/* line 59, ../src/main.scss */
-.slideshow > * {
-  margin: 20px;
-}
-/* line 273, ../src/main.scss */
-.slideshow > * {
-  padding: 3em;
-}
-
-/* line 278, ../src/main.scss */
-.date {
-  font-size: 0.4em;
-  border: 1px solid #7689a6;
-  text-align: center;
-  width: 4.1em;
-  line-height: 1.5em;
-  display: inline-block;
-  vertical-align: middle;
-  margin-right: 1em;
-}
-/* line 287, ../src/main.scss */
-.date .day, .date .month, .date .year {
-  display: block;
-}
-/* line 290, ../src/main.scss */
-.date .day {
-  float: left;
-  width: 1.7em;
-  background: #a9c5ee;
-  color: #2c5490;
-}
-/* line 296, ../src/main.scss */
-.date .month {
-  float: right;
-  width: 2.3em;
-  color: #a9c5ee;
-  background: #2c5490;
-  border-left: 1px solid #88aadd;
-}
-/* line 303, ../src/main.scss */
-.date .year {
-  line-height: 3ex;
-  clear: both;
-  background: #223366;
-  color: #88aadd;
-  border-top: 1px solid #223366;
-}
-
-/* line 313, ../src/main.scss */
-.archive {
-  background-color: rgba(0, 0, 0, 0.02);
-  -moz-box-shadow: white 0 0 3px, rgba(0, 0, 0, 0.2) 0 0 3px inset;
-  -webkit-box-shadow: white 0 0 3px, rgba(0, 0, 0, 0.2) 0 0 3px inset;
-  -o-box-shadow: white 0 0 3px, rgba(0, 0, 0, 0.2) 0 0 3px inset;
-  box-shadow: white 0 0 3px, rgba(0, 0, 0, 0.2) 0 0 3px inset;
-  -moz-border-radius: 5px;
-  -webkit-border-radius: 5px;
-  -o-border-radius: 5px;
-  -ms-border-radius: 5px;
-  -khtml-border-radius: 5px;
-  border-radius: 5px;
-  padding: 2em;
-}
-
-/* line 319, ../src/main.scss */
-.tag {
-  cursor: pointer;
-}
-
-/* line 322, ../src/main.scss */
-.nicer {
-  font-family: "Lucida Grande", Tahoma;
-}
-
-/* line 327, ../src/main.scss */
-#elementblock ul {
-  list-style-type: none;
-}
-/* line 329, ../src/main.scss */
-#elementblock ul li {
-  display: inline-block;
-  width: 252px;
-  margin-right: 24px;
-}
-/* line 332, ../src/main.scss */
-#elementblock ul li a {
-  float: left;
-  background-color: rgba(0, 0, 0, 0.02);
-  -moz-box-shadow: white 0 0 3px, rgba(0, 0, 0, 0.2) 0 0 3px inset;
-  -webkit-box-shadow: white 0 0 3px, rgba(0, 0, 0, 0.2) 0 0 3px inset;
-  -o-box-shadow: white 0 0 3px, rgba(0, 0, 0, 0.2) 0 0 3px inset;
-  box-shadow: white 0 0 3px, rgba(0, 0, 0, 0.2) 0 0 3px inset;
-  -moz-border-radius: 5px;
-  -webkit-border-radius: 5px;
-  -o-border-radius: 5px;
-  -ms-border-radius: 5px;
-  -khtml-border-radius: 5px;
-  border-radius: 5px;
-  padding: 1em;
-  text-align: center;
-  width: 80%;
-}
-/* line 341, ../src/main.scss */
-#elementblock ul li a:hover {
-  background-color: rgba(0, 0, 0, 0.05);
-}
-
-/* line 348, ../src/main.scss */
-.return {
-  background-color: rgba(0, 0, 0, 0.02);
-  -moz-box-shadow: white 0 0 3px, rgba(0, 0, 0, 0.2) 0 0 3px inset;
-  -webkit-box-shadow: white 0 0 3px, rgba(0, 0, 0, 0.2) 0 0 3px inset;
-  -o-box-shadow: white 0 0 3px, rgba(0, 0, 0, 0.2) 0 0 3px inset;
-  box-shadow: white 0 0 3px, rgba(0, 0, 0, 0.2) 0 0 3px inset;
-  -moz-border-radius: 5px;
-  -webkit-border-radius: 5px;
-  -o-border-radius: 5px;
-  -ms-border-radius: 5px;
-  -khtml-border-radius: 5px;
-  border-radius: 5px;
-  padding: .4em .3em 0;
-  margin: 1em 0;
-}
-/* line 40, ../src/main.scss */
-.return > * {
-  padding: 20px;
-}
-/* line 43, ../src/main.scss */
-.return:hover {
-  background-color: rgba(0, 0, 0, 0.05);
-}
-
-/* line 355, ../src/main.scss */
-#related_articles #previous_articles {
-  width: 344px;
-  margin-right: 24px;
-  float: left;
-}
-/* line 359, ../src/main.scss */
-#related_articles #next_articles {
-  float: right;
-  text-align: right;
-  width: 344px;
-  margin-right: 24px;
 }
